# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.14.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support sets in masks or sets; provide RECURSIVE_SETS.
	- Provide --installed-unstable, --installed-testing, --installed-masked
	  see http://bugs.gentoo.org/show_bug.cgi?id=240010
	- Make EIX_LOCAL_SETS a list of directories.
	- Fix visible output of cache methods metadata/flat, see
	  http://bugs.gentoo.org/show_bug.cgi?id=240038
	- Introduce ./configure --with-ebuild-sh-default and
	  EXEC_EBUILD, EXEC_EBUILD_SH, EBUILD_DEPEND_TEMP to allow
	  customization to nonstandard paths, see
	  http://bugs.gentoo.org/show_bug.cgi?id=240460
	  Default is autodetection which works in the above case.
	- Remove EPREFIX_PORTAGE_EXEC (except for delayed substitution
	  for the above new variables).
	- Be extremely careful about vfork() usage to fix segfault from
	  http://bugs.gentoo.org/show_bug.cgi?id=240460
	- New cache methods repo-* support paludis' path scheme.
	- Be more verbose on execution failures for update-eix.

*eix-0.14.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support for PROPERTIES and RESTRICT.
	- Inquire sqlite database more flexible. This should fix
	  http://bugs.gentoo.org/show_bug.cgi?id=238942
	- Fix ./configure --with-eprefix-default/--with-eix-prefix-default.
	  Thanks to Michał Bartoszkiewicz <mbartoszkiewicz@gmail.com> for
	  investigating, see http://bugs.gentoo.org/show_bug.cgi?id=235011
	- Assume SLOT="" is not ok for parse[*]|ebuild[*], see
	  http://bugs.gentoo.org/show_bug.cgi?id=238882

*eix-0.13.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix segfault in numeric comparison of 0 and number with leading 0,
	  see http://forums.gentoo.org/viewtopic-t-278819-start-375.html
	- Disable autotools maintainer mode which seems to be broken anyway.
	- Fix -u in manpage, see http://bugs.gentoo.org/show_bug.cgi?id=236036

*eix-0.13.4
	Emil Beinroth <emilbeinroth at gmx.net>: